--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "author": "Oliver",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
   "start": "concurrently \"npm run server\" \"npm run client\"",
   "server": "nodemon index.js",
