--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "type": "commonjs",
   "main": "server/index.js",
   "scripts": {
-  "start": "concurrently \"npm run server\" \"npm run client\"",
-  "server": "nodemon index.js",
-  "client": "npm start --prefix client"
-},
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon index.js",
+    "client": "npm start --prefix client"
+  },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1"
   },
