--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "school-project-mysql": "file:..",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
