--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "school-project-mysql": "file:.."
   }
